--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
 
 <!-- Top Nav Bar -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 <div class="container-fluid">
 	<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarResponsive">
+
+	</div>
 
 </div>
 
