--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
 <body>
 
 <!-- Top Nav Bar -->
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 <div class="container-fluid">
 	<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarResponsive">
-
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Kanto</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">About</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Profile</a>
+			</li>
+		</ul>
 	</div>
-
-</div>
-
-
-
-</nav>
-<!--- Image Slider -->
+<!--- Slider -->
 
 
 <!--- Jumbotron -->
