--- a/index.html
+++ b/index.html
@@ -36,8 +36,25 @@
 			</li>
 		</ul>
 	</div>
-<!--- Slider -->
+</div>
 
+<!--- Header Slide Show -->
+<div id="slides" class="carousel slide" data-ride="carousel">
+	<ul class="carousel-indicators ">
+		<li data-targets="#slides" data-slide-to="0" class="active"></li>
+		<li data-targets="#slides" data-slide-to="1"></li>
+		<li data-targets="#slides" data-slide-to="2"></li>
+	</ul>
+	<div class="carousel-item active ">
+		<img src="img/background.png"
+	</div>
+	<div class="carousel-item">
+		<img src="img/background2.png"
+	</div>
+	<div class="carousel-item">
+		<img src="img/background3.png"
+	</div>
+</div>
 
 <!--- Jumbotron -->
 
