--- a/index.html
+++ b/index.html
@@ -46,13 +46,19 @@
 		<li data-targets="#slides" data-slide-to="2"></li>
 	</ul>
 	<div class="carousel-item active ">
-		<img src="img/background.png"
+		<img src="img/background.png">
+		<div class="carousel-caption">
+			<h1 class="display-2">Pokemon</h1>
+			<h3>Web Systems Project</h3>
+			<button type="button" class="btn btn-outline-light btn-lg">VIEW KANTO</button>
+			<button type="button" class="btn btn-primary btn-lg">VIEW JHOTO</button>
+		</div>
 	</div>
 	<div class="carousel-item">
-		<img src="img/background2.png"
+		<img src="img/background2.png">
 	</div>
 	<div class="carousel-item">
-		<img src="img/background3.png"
+		<img src="img/background3.png">
 	</div>
 </div>
 
