--- a/index.html
+++ b/index.html
@@ -88,36 +88,28 @@
 </div>
 
 
-<!--- Welcome Section -->
+<!-- Footer -->
+<footer>
+	<div class="container-fluid padding">
+		<div class="row text-center">
+			<div class="col-md-4">
 
+			</div>
 
-<!--- Three Column Section -->
+			<div class="col-md-4">
+				<hr class="light">
+				<h5>Contact Details</h5>
+				<hr class="light">
+				<p>07496359797</p>
+				<p>grant.shiels@btinternet.com</p>
+			</div>
 
-
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
-  
-<!--- Meet the team -->
-
-
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Connect -->
-
-
-<!--- Footer -->
-
-
+			<div class="col-md-4">
+				
+			</div>
+		</div>	
+	</div>
+</footer>
 
 
 </body>
