--- a/pokedex.html
+++ b/pokedex.html
@@ -16,7 +16,7 @@
 <!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 <div class="container-fluid">
-	<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+	<a class="navbar-brand" href="#"><img class="nav-logo" src="img/pokeball-logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -42,7 +42,50 @@
 </div>
 </nav>
 
-<!-- Top Header Image-->
+
+<!--- Header Slide Show -->
+<div id="slides" class="carousel slide" data-ride="carousel">
+
+	<ul class="carousel-indicators ">
+		<li data-targets="#slides" data-slide-to="0" class="active"></li>
+		<li data-targets="#slides" data-slide-to="1"></li>
+		<li data-targets="#slides" data-slide-to="2"></li>
+	</ul>
+
+	<div class="carousel-inner">
+
+		<div class="carousel-item active ">
+			<img src="img/background.png">
+			<div class="carousel-caption">
+				<h1 class="display-2">Pokemon</h1>
+				<h3>Web Systems Project</h3>
+				<button type="button" class="btn btn-outline-light btn-lg">VIEW KANTO</button>
+				<button type="button" class="btn btn-primary btn-lg">VIEW JHOTO</button>
+			</div>
+		</div>
+
+		<div class="carousel-item">
+			<img src="img/background2.png">
+		</div>
+
+		<div class="carousel-item">
+			<img src="img/background3.png">
+		</div>
+	</div>
+</div>
+
+
+<!--- Info Banner -->
+<div class="container-fluid">
+	<div class="row jumbotron">
+		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis velit ligula, nec pellentesque elit fermentum mattis. Donec quam tellus, dignissim sed iaculis at, congue ac dolor. Integer et ultricies eros. Suspendisse potenti. Nullam cursus lacus justo, malesuada scelerisque augue rutrum a. In facilisis varius sem. Maecenas porta id ipsum ac ultricies. Quisque non ullamcorper enim, eu molestie risus. </p>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Learn More</button></a>
+		</div>
+	</div>
+</div>
 
 
 <!-- Footer -->
@@ -68,5 +111,8 @@
 	</div>
 </footer>
 
+
 </body>
 </html>
+
+
